# ChangeLog for app-i18n/enca
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/enca/ChangeLog,v 1.59 2010/01/25 19:26:06 armin76 Exp $

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org> enca-1.12.ebuild:
  ia64/sparc stable wrt #296672

  16 Jan 2010; Tobias Klausmann <klausman@gentoo.org> enca-1.12.ebuild:
  Stable on alpha, bug #296672

  06 Jan 2010; Jeroen Roovers <jer@gentoo.org> enca-1.12.ebuild:
  Stable for PPC (bug #296672).

  29 Dec 2009; Markus Meier <maekke@gentoo.org> enca-1.12.ebuild:
  arm/x86 stable, bug #296672

  19 Dec 2009; Pacho Ramos <pacho@gentoo.org> enca-1.12.ebuild:
  amd64 stable, bug 296672

  18 Dec 2009; Jeroen Roovers <jer@gentoo.org> enca-1.12.ebuild:
  Stable for HPPA (bug #296672).

  14 Dec 2009; Brent Baude <ranger@gentoo.org> enca-1.12.ebuild:
  stable ppc64, bug 296672

  26 Nov 2009; Markus Meier <maekke@gentoo.org> enca-1.11.ebuild:
  arm stable, bug #292962

  21 Nov 2009; nixnut <nixnut@gentoo.org> enca-1.11.ebuild:
  ppc stable #292962

  16 Nov 2009; Jeroen Roovers <jer@gentoo.org> enca-1.11.ebuild:
  Stable for HPPA (bug #292962).

  16 Nov 2009; Markus Meier <maekke@gentoo.org> enca-1.11.ebuild:
  amd64/x86 stable, bug #292962

*enca-1.12 (13 Nov 2009)

  13 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -enca-1.9-r1.ebuild, +enca-1.12.ebuild:
  Version bump.

  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> enca-1.10.ebuild:
  arm/ia64/sparc stable wrt #288568

  31 Oct 2009; Brent Baude <ranger@gentoo.org> enca-1.10.ebuild:
  Marking enca-1.10 ppc64 for bug 288568

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org> enca-1.10.ebuild:
  Stable on alpha, bug #288568

  24 Oct 2009; nixnut <nixnut@gentoo.org> enca-1.10.ebuild:
  ppc stable #288568

  16 Oct 2009; Jeroen Roovers <jer@gentoo.org> enca-1.10.ebuild:
  Stable for HPPA (bug #288568).

  15 Oct 2009; Markus Meier <maekke@gentoo.org> enca-1.10.ebuild: