@@ -1,8 +1,6 @@
-DIST enca-1.10.tar.bz2 525310 RMD160 fa6f916366f6ae16f71d88051eb3d6b1d643426f SHA1 676baddb91257e4cc2661a2803a3c0a94c626074 SHA256 792752c4cfba4284df3da0db9f033205f0fc0d4111d39c697ce7c075cf3b5abc
-DIST enca-1.11.tar.bz2 524041 RMD160 fcaf1cafe2e1de630ed1efc4f403522f791fab75 SHA1 629b204b55b2e1fe3b7c6381f64affcc886402c7 SHA256 d1cebef8db638b22f16be9dae6f4fd330b68d94853ca2f3df4cdd3d0142387c6
 DIST enca-1.12.tar.bz2 531308 RMD160 c39e0f3a5877a3a2b361b1b0d816ef076af8801d SHA1 36e1e6ebac9dbf701008d80362f10ac50378b4dc SHA256 4611eacbbc7712622ae7f01d8d9f088eae095cfdc485e70ee16df86fa349ed91
-EBUILD enca-1.10.ebuild 1015 RMD160 d48e624618de90e51ff5faa8499a0676a64d8dbb SHA1 43607683cc80e1e09b4eb799916b590a95055457 SHA256 ccd4470988417638b8edc5fde6749bc47b2f5effd7d24a055abd3cc43087fef1
-EBUILD enca-1.11.ebuild 1014 RMD160 766e7bf5fab15819440d2a1aa33f48b51bf5c5e3 SHA1 2146235ceb197fa75dbc37bd06ae8e03cc586c22 SHA256 3b4b89a0cda6db48fc59a50c4dd2d7129b305d08c397d7d865f2f4da93b022e5
-EBUILD enca-1.12.ebuild 1026 RMD160 ba5c8d4668ae168d6e9d8a7b345df468da027abf SHA1 732a23f2182d6f90377ad82b702ef6e9168a8abb SHA256 a094987976417942c091e663797152773d2e0db6ebcdcd3cca175a11c8304750
-MISC ChangeLog 6491 RMD160 a88bc0c698085ee78a2c6d7503eaabf2e921f9f8 SHA1 398f223a84b7e9dc67a73f1430992495c996f79c SHA256 efcc723adf27d9c4edf72dc9430acd2c0728c573868fcd6354275681cec5c9a5
+DIST enca-1.13.tar.bz2 532000 RMD160 347d81c5211a74aad1e5aca9ba6a86883158a804 SHA1 448e5a6d356980ca6d489e760eacbcca118b320f SHA256 6c091455d524b3ddae3533fe9bb375092f60ad6fe252e0777c873bd7869c7432
+EBUILD enca-1.12.ebuild 1061 RMD160 16cc6caab537f57314156fa398d7a0591faf7d11 SHA1 aa851077b2ff940beb187b6ce48bfbe58c97cc22 SHA256 c69e3ecf39ce0871267e68760af89916ffe449abe9d688a7b86561a42ca7e1ec
+EBUILD enca-1.13.ebuild 1059 RMD160 13bebd970d6d7b263af7ebe3294ff7d4f7699de8 SHA1 2e27437575b396599e92b70d2a9d613c6442f81c SHA256 bd31b459f3aa93456bdd5e5a470d505ea03417ef0aded0baafe4494dc10bd38c
+MISC ChangeLog 6792 RMD160 255218a7bdd5fd64d87f8e358f035574547f3fce SHA1 985ebc9aff549f858cd735d7b741b8ebce1d1f42 SHA256 7c89414e175ef3b88509f8ce07dbaea1a04528caff087f202155a9dada2233fa
 MISC metadata.xml 314 RMD160 25181cde297628576a9545bea3a76601485bfaf3 SHA1 ac16b621acf5a22b64859e3323d466fb556fc4c8 SHA256 736baab77aea9c4da199c01e3cd6877c271bd02357ff9b41b537a2232c6e96d7
