@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/enca/enca-1.11.ebuild,v 1.5 2009/11/26 20:34:27 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/enca/enca-1.13.ebuild,v 1.1 2010/02/25 18:13:29 arfrever Exp $
 
 EAPI="2"
 
@@ -12,16 +12,16 @@ SRC_URI="http://dl.cihar.com/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~sparc-solaris ~x86-solaris"
-IUSE="doc"
+KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE="doc +recode"
 
-DEPEND=">=app-text/recode-3.6_p15"
+DEPEND="recode? ( >=app-text/recode-3.6_p15 )"
 RDEPEND="${DEPEND}"
 
 src_configure() {
 	econf \
-		--with-librecode="${EPREFIX}"/usr \
 		--enable-external \
+		$(use_with recode librecode "${EPREFIX}"/usr) \
 		$(use_enable doc gtk-doc)
 }
 
