@@ -1,6 +1,16 @@
 # ChangeLog for app-i18n/enca
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/enca/ChangeLog,v 1.59 2010/01/25 19:26:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/enca/ChangeLog,v 1.61 2010/02/25 18:13:29 arfrever Exp $
+
+*enca-1.13 (25 Feb 2010)
+
+  25 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +enca-1.13.ebuild:
+  Version bump.
+
+  25 Feb 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> enca-1.12.ebuild:
+  Make recode support optional, wrt bug #257256 by Leonid Krivoshein
+  <klark73@mail.ru>
 
   25 Jan 2010; Raúl Porcel <armin76@gentoo.org> enca-1.12.ebuild:
   ia64/sparc stable wrt #296672
